--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-Title: "Jekyll Resume Template"
+title: "Jekyll Resume Template"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
