--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,11 +1,11 @@
 # Associations
-- organization: Beer for the World
-  role: Volunteer
-  year: 2008 &mdash; Present
-  summary: Organized fund drives and participated in fundraising events for the benefit of families in third world countries without proper access to malt beverages.
+- organization: Norths Spirngs Marching Band
+  role: Saxophone
+  year: 2015 &mdash; Present
+  summary: The North Springs Marching Band program addresses the needs of beginning through advanced wind and percussion players in curricular and extra-curricular ensembles, self directed practice, and music theory. 
 
 
-- organization: Springfield Nuclear Workers Labor Union
-  role: Member in Good Standin
-  year: 1994 &mdash; Present
-  summary: Founding member of the local nuclear workers labor union.
+- organization: North Springs Friends of Math and Sceience
+  role: Member
+  year: 2015 &mdash; Present
+  summary: The Friends of Math and Science (FOMAS) is a 501(c)3, parent-run, non-profit booster organization formed to support the North Springs Charter High School Math and Science Magnet program, and more recently, the Math/Science Academy. Its purpose is to benefit the students through parent and community volunteerism, as well as financial and collaborative support. 
