--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+description: "I want to be a computer enginneer because i like working with and on computers and a taking technology apart and putting it bact together."
 
 # Build settings
 markdown: kramdown
@@ -11,11 +11,11 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Adefemi Olateru"
-resume_title:                   "Nuclear Safety Inspector"
-resume_contact_email:
-  "homerjsimpson@youremailaddress.com"
-resume_header_contact_info: "742 Evergreen Terrace, Springfield | 555-7334 | homerjsimpson@youremailaddress.com"
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_title:                   "Computer Engineer"
+resume_contact_email:            
+  "adefemiolateru@gmail.com"
+resume_header_contact_info: "2110 Fern Valley Dr Atlant,GA | 404-781-3357 | adefemiolateru@gmail.com"
+resume_header_intro: "<p>TI hkbhihbiii</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
