--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- courses: Honors Lit, Acc Gemotry, Honors Chmeistry, Intro to Digital Tech
+  school: North Springs Chaarter High School
+  year: 2015 &mdash; Present
+  awards: Honor Roll &mdash; Principles list
+  summary: I played basketball and then I was in Marching Band. I am also in the club named FOMAS.
