--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Jekyll Resume Template"
-description: "I want to be a computer enginneer because i like working with and on computers and a taking technology apart and putting it bact together."
+description: ""
 
 # Build settings
 markdown: kramdown
@@ -15,7 +15,7 @@ resume_title:                   "Computer Engineer"
 resume_contact_email:            
   "adefemiolateru@gmail.com"
 resume_header_contact_info: "2110 Fern Valley Dr Atlant,GA | 404-781-3357 | adefemiolateru@gmail.com"
-resume_header_intro: "<p>TI hkbhihbiii</p>"
+resume_header_intro: "<p>I want to be a computer enginneer because i like working with and on computers and a taking technology apart and putting it bact together.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
