--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,11 +1,11 @@
-# Jobs
-# Springfield Nuclear Power Plant
-- company: Springfield Nuclear Power Plant
-  position: Safety Inspector
-  duration: Nov, 1980 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
+# Volunteer Work
+# Kicks for Kids
+- company: 
+  position: Shoe Collector
+  duration: 2015
+  summary: Served as co-site director to collect new or used shoes for the people of Haiti. I collected over 125 pairs of shoes in a 3 week period	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
 
-# Windmill Crank Operator
+# Git Hub
 - company: Sir Putt-A-Lot's Merrie Olde Fun Centre
   position: Safety Inspector
   duration:  Jun, 1978 &mdash; Sept, 1979
